--- a/react_app/package.json
+++ b/react_app/package.json
@@ -17,7 +17,8 @@
     "antd": "^5.6.4",
     "graphql": "^16.7.1",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
     "@types/node": "^20.4.1",
