--- a/rails_app/Gemfile
+++ b/rails_app/Gemfile
@@ -71,3 +71,9 @@ gem "graphql", "~> 2.0"
 gem "graphiql-rails", group: :development
 
 gem "rack-cors", "~> 2.0"
+
+gem "jwt", "~> 2.7"
+
+gem "simple_command", "~> 1.0"
+
+gem "byebug", "~> 11.1"
