--- a/react_app/package.json
+++ b/react_app/package.json
@@ -13,6 +13,8 @@
     "prettier:fix": "prettier --write \"src/**/(*.tsx|*.ts|*.css|*.scss)\""
   },
   "dependencies": {
+    "@ant-design/icons": "^5.1.4",
+    "@ant-design/pro-components": "^2.6.7",
     "@apollo/client": "^3.7.17",
     "antd": "^5.6.4",
     "graphql": "^16.7.1",
