--- a/react_app/package.json
+++ b/react_app/package.json
@@ -16,6 +16,10 @@
     "@ant-design/icons": "^5.1.4",
     "@ant-design/pro-components": "^2.6.7",
     "@apollo/client": "^3.7.17",
+    "@emotion/react": "^11.11.1",
+    "@emotion/styled": "^11.11.0",
+    "@mui/icons-material": "^5.14.1",
+    "@mui/material": "^5.14.2",
     "antd": "^5.6.4",
     "graphql": "^16.7.1",
     "react": "^18.2.0",
