--- a/react_app/package.json
+++ b/react_app/package.json
@@ -21,9 +21,11 @@
     "@mui/icons-material": "^5.14.1",
     "@mui/material": "^5.14.2",
     "antd": "^5.6.4",
+    "clsx": "^2.0.0",
     "graphql": "^16.7.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.45.2",
     "react-router-dom": "^6.14.1"
   },
   "devDependencies": {
