--- a/rails_app/Gemfile
+++ b/rails_app/Gemfile
@@ -65,6 +65,7 @@ group :test, :development do
   gem 'dotenv-rails'
   gem "rspec-rails"
   gem "byebug", "~> 11.1"
+  gem 'factory_bot_rails'
 end
 gem "bcrypt", "~> 3.1"
 
